[2000-03-11]

=item * Executable completion now even after initial '!' for shell escape - warp [2000-03-11]

=item * Some minimal status code testing - warp [2000-03-11]

=item * Understands environment variable IGNOREEOF - warp [2000-03-11]

=item * Accepts the -i command line switch and ignores it (bash compatibility) - warp [2000-03-11]

=back

=head2 Bugfixes

=over 4

=item * Fixed some small problems with globbing code - warp [2000-03-09]

=item * Fixed problem with pod2man and CHANGES.pod reported on Sourceforge - warp [2000-03-11]

=item * SIGTERM and HUP is now not ignored anymore and exits the Perl Shell instead  - warp [2000-03-11]

=back

=cut

###############################################################################
###############################################################################
##
## 0.007
##
###############################################################################
###############################################################################


=head1 0.007 [2000-02-14]

Contributions primarily by Markus Peter (C<warp>) and Simon Huggins
(C<huggie>).


=head2 New Features

=over 4

=item *

Support for window titles. New environment variable C<$PSH_TITLE>,
C<$Psh::change_title>, C<$Psh::window_title>. The behavior is like prompt
strings.

=item *

Strategy B<perlfunc> is a default strategy again. C<$Psh::perlfunc_builtins>
determines wether Perl builtins should be C<eval>ed (default 0)

=item *

Builtin B<kill> now supports sending a signal to a named job (e.g. "C<emacs & ;
kill emacs>").

=item *

Builtin B<strategy> for loading strategies on demand and adding them to
the list of strategies to use. Handy for strategies that are used less often
than the core strategies.

=item *

Properly pipeable aliases.

=item *

Fallback and most other builtins are loaded on demand.

=item *

Converted C<&Psh::symbols()> into a builtin, B<symbols>.

=item *
