@@ -49,6 +49,7 @@ __DATA__
 exec_failed=Error - Could not exec %1.
 fork_failed=Error - Could not fork.
 simulate_perl_w=Simulating -w switch and strict
+no_r_flag=If you intended to use a different rc file, please now use the -f switch.\n -r is now reserved for 'restricted mode'.
 perm_denied=%2: %1: Permission denied.
 no_such_dir=%2: %1: No such directory.
 no_such_builtin=%2: %1: No such builtin.
@@ -57,7 +58,6 @@ no_jobcontrol=Your system does not support job control
 interal_error=Internal psh error. psh would have died now.
 input_incomplete=%2: End of input during incomplete expression %1
 clueless=%2: Can't determine how to evaluate '%1'.
-# '
 psh_echo_wrong=%1: WARNING: $Psh::echo is not a CODE reference or an ordinary scalar.
 psh_result_array_wrong=%1: WARNING: $Psh::result_array is neither an ARRAY reference or a string.
 cannot_read_script=%2: Cannot read script '%1'
